# collision-avoidance

./: .gitignore  CMakeLists.txt  README.md  Scheme_visualization.puml  collision_avoidance_node_main.py  configs.rviz  package.xml  setup.py
launch/: collision_avoidance.launch
src/: __init__.py  collision_avoidance_node.py  collision_avoidance_node_factory.py  collision_zones.py  collision_zones_manager.py  input_data_adapter.py  output_data_adapter.py  simulator.py
tmp/: run_collision_avoidance_robot.sh
